--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -32,6 +32,13 @@ jobs:
         run: |
           python scripts/run_benchmarks.py
 
+      - name: Upload benchmark results as artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: benchmark-results
+          path: |
+            zia_benchmark/benchmark_results/results.json
+
       - name: Configure Git
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         run: |
@@ -42,18 +49,6 @@ jobs:
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         run: |
           git checkout --orphan benchmark-results
-          git rm -rf .
-          mkdir -p benchmark_results
-
-      - name: Move benchmark files
-        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-        run: |
-          if [ -f benchmark_results/results.json ]; then
-            mv benchmark_results/results.json benchmark_results/
-          else
-            echo "No benchmark results found"
-            exit 1
-          fi
 
       - name: Commit benchmark results
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
