--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.20.6",
+    "@types/plotly.js": "^2.35.2",
     "axios": "^1.7.9",
+    "plotly.js-dist-min": "^2.35.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-plotly.js": "^2.6.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
