--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
   - repo: local
     hooks:
-      - id: format-code
-        name: Format Code
-        entry: devel/format_code.sh
+      - id: check-format
+        name: Check Code Formatting
+        entry: devel/check_format.sh
         language: script
         pass_filenames: false
