--- a/zia_benchmark/pyproject.toml
+++ b/zia_benchmark/pyproject.toml
@@ -1,8 +1,34 @@
 [build-system]
-requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
-build-backend = "setuptools.build_meta"
+requires = ["scikit-build-core>=0.5.0", "pybind11>=2.11.1"]
+build-backend = "scikit_build_core.build"
 
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = ["test_*.py"]
-addopts = "-ra -q"
+[project]
+name = "zia_benchmark"
+version = "0.1.0"
+description = "Benchmarking compression methods for numeric arrays"
+readme = "README.md"
+requires-python = ">=3.8"
+authors = [
+    { name = "Jeremy Magland" }
+]
+dependencies = [
+    "numpy",
+    "scipy",
+    "zstandard",
+    "simple_ans",
+    "requests",
+    "lindi",
+    "brotli",
+    "click",
+    "numba",
+    "pybind11>=2.11.1"
+]
+
+[tool.scikit-build]
+cmake.minimum-version = "3.15"
+cmake.source-dir = "src/zia_benchmark/algorithms/simple_ans"
+cmake.build-type = "Release"
+wheel.packages = ["src/zia_benchmark"]
+
+[project.scripts]
+zia-benchmark = "zia_benchmark.cli:main"
