--- a/zia_benchmark/src/zia_benchmark/algorithms/simple_ans/CMakeLists.txt
+++ b/zia_benchmark/src/zia_benchmark/algorithms/simple_ans/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(markov_reconstruct_cpp)
+project(markov_cpp)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -14,8 +14,23 @@ FetchContent_Declare(
     GIT_REPOSITORY https://github.com/pybind/pybind11.git
     GIT_TAG v2.11.1
 )
-FetchContent_MakeAvailable(pybind11)
 
+# Fetch and include Eigen
+FetchContent_Declare(
+    eigen
+    GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
+    GIT_TAG 3.4.0
+)
+
+FetchContent_MakeAvailable(pybind11 eigen)
+
+# Build markov_reconstruct module
 pybind11_add_module(markov_reconstruct_cpp_ext markov_reconstruct.cpp)
 
-install(TARGETS markov_reconstruct_cpp_ext DESTINATION zia_benchmark/algorithms/simple_ans)
+# Build markov_predict module
+pybind11_add_module(markov_predict_cpp_ext markov_predict.cpp)
+target_link_libraries(markov_predict_cpp_ext PRIVATE Eigen3::Eigen)
+
+# Install both modules
+install(TARGETS markov_reconstruct_cpp_ext markov_predict_cpp_ext
+        DESTINATION zia_benchmark/algorithms/simple_ans)
