--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install package and dependencies
         run: |
-          cd zia_benchmark
+          cd benchcompress
           pip install -e .
 
       - name: Install simple_ans from source for now
@@ -49,7 +49,7 @@ jobs:
         with:
           name: benchmark-results
           path: |
-            zia_benchmark/benchmark_results/results.json
+            benchcompress/benchmark_results/results.json
 
       - name: Configure Git
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
