--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -15,12 +15,15 @@
     "@tanstack/react-table": "^8.20.6",
     "@types/plotly.js": "^2.35.2",
     "axios": "^1.7.9",
+    "katex": "^0.16.21",
     "plotly.js-dist-min": "^2.35.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
     "react-plotly.js": "^2.6.0",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
