--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -23,7 +23,8 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.1.3",
     "rehype-katex": "^7.0.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
