--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,25 +1,20 @@
 name: Deploy to GitHub Pages
+
 on:
   push:
-    branches: ['main']
-    paths:
-      - 'web-ui/**'
-      - 'paper/**'
+    branches: [ "main" ]
   workflow_dispatch:
 
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
-  group: 'pages'
-  cancel-in-progress: true
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -28,23 +23,40 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Node
-        uses: actions/setup-node@v4
+
+      - name: Install pandoc and pandoc-citeproc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc pandoc-citeproc
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '20'
           cache: 'npm'
-          cache-dependency-path: './web-ui/package-lock.json'
+          cache-dependency-path: web-ui/package-lock.json
+
+      - name: Build paper
+        run: |
+          chmod +x devel/copy_paper_to_web.sh
+          ./devel/copy_paper_to_web.sh
+
       - name: Install dependencies
-        run: cd web-ui && npm install
-      - name: Build
-        run: cd web-ui && npm run build
+        working-directory: web-ui
+        run: npm ci
+
+      - name: Build website
+        working-directory: web-ui
+        run: npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload dist folder
-          path: './web-ui/dist'
+          path: web-ui/dist
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
